Wed Dec  1 21:41:57 2010  Tanaka Akira  <akr@fsij.org>

	* test/socket/test_addrinfo.rb: extract Errno::EADDRINUSE as a method.

	* test/socket/test_socket.rb: ditto.

Wed Dec  1 15:08:32 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/openssl/test_ssl.rb (test_not_started_session): non socket
	  argument of SSLSocket.new is not supported on Windows.

Wed Dec  1 14:36:36 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_memhash): zero-filled strings should return
	  different values.  [ruby-core:33500]

Wed Dec  1 14:27:49 2010  Ryan Davis  <ryand-ruby@zenspider.com>

	* lib/minitest/*.rb: Imported minitest 2.0.0 r5952.
	* test/minitest/*.rb: ditto.
	* lib/test/unit.rb: Compatibility fix for minitest changes.

Wed Dec  1 10:16:41 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* string.c (rb_str_inspect): fix typo (not 0xFD but 0xFE).

Wed Dec  1 09:28:27 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* addr2line.c: Follow .gnu_debuglink section.
	  A user of distribution provided ruby will see line
	  info if s/he has a debug package for ruby.
	  patched by Shinichiro Hamaji [ruby-dev:42655]

Wed Dec  1 01:29:15 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* string.c (rb_str_inspect): inspect as a dummy encoding string
	  when a UTF-16/32 (not BE/LE) string does not have a BOM.
	  Unicode and some RFCs say that a string labeled as UTF-16/32
	  doesn't have a BOM, it should be considered big endian.
	  But many Windows programs generates little endian UTF-16
	  strings without a BOM. So String#inspect treats a string
	  labeled UTF-16/32 without a BOM as a dummy encoding string.
	  patched by Martin Duerst. [ruby-core:33461]

Tue Nov 30 17:04:10 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* addr2line.c (parse_debug_line_cu): ignore DW_LNE_set_discriminator.
	  To ignore, it needs to read a single unsigned LEB128 integer.

Tue Nov 30 16:29:19 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* vm_dump.c: undef HAVE_BACKTRACE when the OS is FreeBSD (in other