@@ -1,3 +1,7 @@
+Wed Dec  1 21:43:21 2010  Tanaka Akira  <akr@fsij.org>
+
+	* array.c: parenthesize macro arguments.
+
 Wed Dec  1 21:41:57 2010  Tanaka Akira  <akr@fsij.org>
 
 	* test/socket/test_addrinfo.rb: extract Errno::EADDRINUSE as a method.
